# hpc_exercise

./: .gitignore  CMakeLists.txt  Readme.md
src/: 10_1.cpp  1_1.cpp  1_2.cpp  1_3.cpp  3_2.cpp  4_1.cpp  4_2.cpp  5_1.cpp  5_2.cpp  7_1.cpp  8_1.cpp  9_1.cpp  9_2.cpp  9_3.cpp  CMakeLists.txt  util.cpp
src/include/: common.h  logger.h
test/: 10_1_test.cpp  1_1_test.cpp  1_2_test.cpp  1_3_test.cpp  3_2_test.cpp  4_1_test.cpp  4_2_test.cpp  5_1_test.cpp  5_2_test.cpp  6_1_test.cpp  6_2_test.cpp  7_1_test.cpp  8_1_test.cpp  9_1_test.cpp  9_2_test.cpp  9_3_test.cpp  CMakeLists.txt
